--- a/src/ui-template.html
+++ b/src/ui-template.html
@@ -30,6 +30,12 @@
         line-height: 1;
       }
 
+      textarea {
+        margin: 0;
+        border: 0;
+        padding: 0;
+      }
+
       .logo {
         width: 110px;
         height: 42px;
@@ -164,7 +170,7 @@
     <pre><code id="res" class="pane response"></code></pre>
     <pre><code id="req-mirror" class="pane request-mirror"></code></pre>
 
-<pre><code id="req" class="pane request" contenteditable="true">#
+<textarea id="req" class="pane request">#
 # Type your query into this pane and click the
 # "Run Query" button to execute. The result will
 # show up in the pane on the right.
@@ -172,7 +178,7 @@
 
 {
   # Your query...
-}</code></pre>
+}</textarea>
 
     <button id="run" class="run-button">
       RUN QUERY
@@ -232,11 +238,19 @@
       }
 
       function setText(pane, text) {
-        pane.innerText = text
+        if (pane.nodeName.toLowerCase() === 'textarea') {
+          pane.value = text
+        } else {
+          pane.innerText = text
+        }
       }
 
       function getText(pane) {
-        return pane.innerText
+        if (pane.nodeName.toLowerCase() === 'textarea') {
+          return pane.value
+        } else {
+          return pane.innerText
+        }
       }
 
       function setPersistedValue(value) {
@@ -268,7 +282,7 @@
       })
 
       runButton.addEventListener('click', async () => {
-        const requestText = requestPane.innerText
+        const requestText = getText(requestPane)
         const responseData = await fetch('/lyriql', { method: 'POST', body: requestText })
         const jsonResponse = await responseData.json()
         setText(responsePane, formatResponseJSON(jsonResponse))
